# molecular-dynamics

./: .gitignore  guide.md  molecular-hpc.txt  run.job
milestones/: meson.build
milestones/01/: main.cpp  meson.build
milestones/02/: main.cpp  meson.build
milestones/04/: main.cpp  meson.build
milestones/05/: main.cpp  meson.build
milestones/06/: main.cpp  meson.build
milestones/07/: main.cpp  make_whisker.py  meson.build
milestones/08/: main.cpp  meson.build
milestones/09/: main.cpp  meson.build
plot/: energy_lineplot.ipynb  example.ipynb  lineplot_example.ipynb  milestone07.ipynb  milestone08.ipynb  milestone09.ipynb  time_lineplot.ipynb
plot/data-milestone-04/: total_energy_001.txt  total_energy_005.txt  total_energy_01.txt
plot/data-milestone-05/: total_energy_001.txt  total_energy_005.txt  total_energy_01.txt
plot/data-milestone-07/: interval_e_total_1.txt  interval_e_total_10.txt  interval_e_total_5.txt
plot/data-milestone-09/: stress-1.txt  stress-11.txt  stress-12.txt  stress-13.txt  stress-14.txt  stress-15.txt  stress-2.txt  stress-3.txt  stress-4.txt  stress-5.txt  stress-6.txt
plot/data-milestone-09/large/: stress-10.txt  (+3 more)
report/: egbib.bib  lennard-jones-units.txt  molecular.tex
src/: atoms.h  ducastelle.cpp  hello.cpp  hello.h  lattice.cpp  lattice.h  lj.cpp  lj.h  lj_direct_summation.cpp  lj_direct_summation.h  meson.build  thermostat.cpp  thermostat.h  verlet.cpp  verlet.h  xyz.h
tests/: meson.build  test_ducastelle.cpp  test_hello_world.cpp  test_lj.cpp  test_neighbors.cpp  test_thermostat.cpp  test_verlet.cpp
